--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,6 @@
+# -----------------------
+#  ✅ Unit Tests
+# -----------------------
 add_executable(
         TransportCatalogueTests
         transport_catalogue_tests.cpp
@@ -8,7 +11,6 @@ target_link_libraries(
         PRIVATE
         TransportCatalogueLib
         GTest::gtest
-        GTest::gtest_main
 )
 
 target_include_directories(
@@ -19,3 +21,38 @@ target_include_directories(
 
 include(GoogleTest)
 gtest_discover_tests(TransportCatalogueTests)
+
+
+# ----------------------------
+#  ✅ Integration Tests
+# ----------------------------
+add_executable(
+        TransportCatalogueIntegrationTests
+        transport_catalogue_integration_tests.cpp
+        helpers.h
+)
+
+target_link_libraries(
+        TransportCatalogueIntegrationTests
+        PRIVATE
+        TransportCatalogueLib
+        GTest::gtest
+)
+
+target_include_directories(
+        TransportCatalogueIntegrationTests
+        PRIVATE
+        ${CMAKE_SOURCE_DIR}/include
+)
+
+# Copy tests/data to build dir next to test binary
+add_custom_command(
+        TARGET TransportCatalogueIntegrationTests
+        POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+                ${CMAKE_SOURCE_DIR}/tests/data
+                ${CMAKE_CURRENT_BINARY_DIR}/data
+)
+
+# Discover integration tests
+gtest_discover_tests(TransportCatalogueIntegrationTests)
