Created Json Builder class, which give comfortable interface to work with json objects. Used Json builder in transport catalogue.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(TransportCatalogueLib
         src/request_handler.cpp
         src/svg.cpp
         src/transport_catalogue.cpp
+        src/json_builder.cpp
 )
 
 target_include_directories(TransportCatalogueLib PUBLIC ${CMAKE_SOURCE_DIR}/include)
